Started code to get sst dat but can't figure out path

--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -1104,6 +1104,313 @@ stopCluster(cl)
 
 ```
 
+
+## SST time of emergence
+
+
+##### Fun `GetEnvData`
+
+```{r get_env_data, eval = T, echo = T}
+
+ModelRCP <- "GFDL85"
+
+getEnvVar=function(yr,ModelRCP,ensemble,Variable){
+  
+  filepath <- paste("Z:/JULIANO_NEYMAR/PristineSeasData/Climate",ModelRCP,"",sep="/")
+  
+  if(Variable == "sst"){
+    sst = paste("SST_",yr,".txt",sep="")
+    read_me_sst <- paste(filepath,sst,sep="")[1]
+    data <- read.csv(read_me_sst,header=F)  
+    
+  }
+  
+  
+  if(Variable == "botom"){
+    botom = paste("botom_",yr,".txt",sep="")
+    read_me_botom <- paste(filepath,botom,sep="")[1]
+    data <- read.csv(read_me_botom,header=F)
+  }
+  
+  # Retrun
+  
+  getTemp <- data %>% 
+    mutate(ensemble = ensemble)
+}
+
+
+
+```
+
+```{r temp_emergence, eval = F, echo = F}
+
+
+TempEmer <- function(Hist_y = 2005){ # The LAST year of Historical data
+  
+  
+  # Historical mean and sd of distance
+  historical <- Centroids_id %>%
+    filter(year <= Hist_y) %>% 
+    ungroup() %>%
+    group_by(taxon_key,ensemble,eez_name,neighbour_id) %>%
+    summarise_at(vars("distance"),
+                 c(hd_temp_mean=mean,
+                   hd_temp_sd=sd,
+                   n_yrs =~n())
+                 )
+  
+    # Future results
+  future <- Centroids_id %>% 
+    filter(year > Hist_y)
+  
+   # Get unique eezs
+  Unique_EEZs <- unique(EEZ_ids$eez_name)
+  
+  # Transboundary Index
+  Trans_index <- Centroids_id %>% 
+    left_join(historical,
+              by = c("taxon_key","eez_name","ensemble","neighbour_id")
+    ) %>%
+    # Re arrenging table for mutate
+    gather("variable","value",distance:hd_temp_sd) %>%
+    ungroup() %>% 
+    mutate(value = ifelse(is.na(value),0,value)) %>% 
+    mutate(
+      names = ifelse(eez_name ==Unique_EEZs[1],paste("Country_A",variable,sep="_"),paste("Country_B",variable,sep="_")
+    )
+    ) %>%
+    select(-eez_name,-variable) %>%
+    spread(names,value) %>% 
+    # mutate index
+    mutate(
+      trans_index = (Country_A_distance/Country_A_hd_temp_sd - Country_B_distance/Country_B_hd_temp_sd)^2
+    # )
+    ) %>% 
+    # Ten years average of results
+    group_by(taxon_key,ensemble,neighbour_id) %>% 
+    mutate(RMean = rollmean(x = trans_index, 
+                            10, 
+                            align = "right", 
+                            fill = trans_index,
+                            na.rm=T)
+    ) %>% 
+    # filter(year > 1960) %>%
+    select(taxon_key,neighbour_id,year,ensemble,trans_index,RMean)
+  
+  # Average of 10 years mean of ensemble members results
+  mean_sd_index <- Trans_index %>% 
+    group_by(taxon_key,year,neighbour_id) %>% 
+    summarise_at(vars("RMean"),
+                 c(trend=mean,
+                   ensemble_sd=sd,
+                   n_ens = ~n()
+                   
+    ),
+    na.rm=T
+    )
+    
+    # Valid ensembles
+  # Only perform analysis on ensembles containing all years between 1951 and 2040
+    n_years <- mean_sd_index %>% 
+      group_by(n_ens) %>% 
+      summarise(
+        n_year = n()
+      ) %>% 
+      filter(
+        n_year == 149
+      )
+    
+    mean_sd_index <- mean_sd_index %>% 
+      filter(n_ens %in% n_years$n_ens)
+  
+  # Estimate noice from ensemble members
+  historic_sd <- Trans_index %>% 
+    filter(year <= Hist_y) %>% 
+    group_by(taxon_key,neighbour_id,ensemble) %>% #Average historic data per year first
+    summarise_at(vars("trans_index"),
+                 c(trend= mean),
+                 na.rm=T
+                 ) %>% 
+    group_by(taxon_key,neighbour_id) %>% #Capture ensemble variation
+    summarise_at(vars("trend"),
+                 c(hist_mean=mean,
+                   noise=sd,
+                   n_ens = ~n())
+                 )
+  
+  
+  # For testing
+  if(Plot == T & length(historic_sd$hist_mean) > 1){
+  # Plot the result, bruh
+  
+  # Step to determine if data exists
+  Plot_Test <- nrow(subset(mean_sd_index, trend > (historic_sd$hist_mean+historic_sd$noise) | trend < (historic_sd$hist_mean-historic_sd$noise)))>0
+  
+  ggplot() +
+    geom_line(data = mean_sd_index,
+              aes(
+                x = year,
+                y = trend
+              )
+    ) +
+    geom_ribbon(data = mean_sd_index,
+                aes(x=year,
+                    ymin=historic_sd$hist_mean-historic_sd$noise,
+                    ymax=historic_sd$hist_mean+historic_sd$noise),
+                alpha = 0.5,
+                fill = "grey50"
+    ) +
+    geom_ribbon(data = mean_sd_index,
+                aes(x=year,
+                    ymin=historic_sd$hist_mean-(historic_sd$noise*2),
+                    ymax=historic_sd$hist_mean+(historic_sd$noise)*2)
+                ,
+                alpha = 0.5,
+                fill = "grey30"
+    ) +
+    geom_line(data = mean_sd_index,
+              aes(
+                x = year,
+                y = historic_sd$hist_mean
+              ),
+              colour = "grey50"
+    ) +
+    # Conditional, will only plot circles if the data exists
+    {if(Plot_Test)geom_point(data = subset(mean_sd_index, trend > (historic_sd$hist_mean+historic_sd$noise) | trend < (historic_sd$hist_mean-historic_sd$noise)),
+               aes(
+                 x = year,
+                 y = trend,
+                 colour = "red",
+               ),
+               shape = 1,
+               size = 3
+    )
+      } +
+    geom_vline(xintercept = Hist_y,colour="blue",alpha = 0.5) +
+    scale_x_continuous(breaks = seq(1950,2100,5)) +
+    theme_classic()
+  
+    tk <- unique(mean_sd_index$taxon_key)
+  
+    ggsave(paste(tk,Id,"plot_example.jpg",sep="_"),
+       plot = last_plot(),
+       width = 10,
+       height = 8,
+       units = "in",
+       path = my_path("R")
+       )
+  
+  }
+  
+  # If no historic data then emergin year is the first year of data
+  if(nrow(historic_sd) == 0){
+    
+    Final_Result <- mean_sd_index %>%
+      group_by(taxon_key,neighbour_id,n_ens) %>%
+      summarise(emerging_yr= min(year)) %>%
+      left_join(EEZ_ids,
+                by = "neighbour_id") %>%
+      ungroup() %>%
+      select(taxon_key,eez_name,eez_neighbour,n_ens,emerging_yr) %>% 
+      mutate(tresh= NA)
+  
+  return(Final_Result)
+    
+  }else{
+  
+    Final_Result <- mean_sd_index %>%
+      filter(year > Hist_y) %>%
+      mutate(
+        tresh_one = ifelse(trend > (historic_sd$hist_mean+historic_sd$noise) | trend < (historic_sd$hist_mean-historic_sd$noise),"One",NA),
+        tresh_two = ifelse(trend > (historic_sd$hist_mean+(2*historic_sd$noise)) | trend < (historic_sd$hist_mean-(2*historic_sd$noise)),"Two",NA)
+      ) %>%
+      gather("tresh","YesNo",tresh_one,tresh_two) %>% 
+      filter(!is.na(YesNo)) %>% 
+      group_by(taxon_key,neighbour_id,n_ens,tresh) %>%
+      summarise(emerging_yr= min(year)) %>%
+      left_join(EEZ_ids,
+                by = "neighbour_id") %>%
+      ungroup() %>%
+      select(taxon_key,eez_name,eez_neighbour,n_ens,emerging_yr,tresh)
+  
+  return(Final_Result)
+  }
+}
+  
+
+
+
+```
+
+
+```{r william_code, eval = F, echo = F}
+
+datascale<-subset(testdata,!is.na(MHW) & !is.na(MeanChange))
+MHWBreaks<-c(0.2,0.4,0.5,0.6,0.8,2.1)
+MeanChangeBreaks<-c(-0.4,0.6,0.7,0.8,1.0,2.0)
+#testdata$MHW <- with(testdata, cut(MHW,
+#                                   breaks=quantile(MHW, probs=seq(0,1, by=0.2), na.rm=TRUE),
+#                                   include.lowest=TRUE))
+testdata$MHW <- with(testdata, cut(MHW,
+                                   breaks=MHWBreaks, na.rm=TRUE),
+                                   include.lowest=TRUE)
+testdata$MHW <- as.numeric(testdata$MHW)
+#testdata$MeanChange <- with(testdata, cut(MeanChange,
+#                                          breaks=quantile(MeanChange, probs=seq(0,1, by=0.2), na.rm=TRUE),
+#                                          include.lowest=TRUE))
+testdata$MeanChange <- with(testdata, cut(MeanChange,
+                                          breaks=MeanChangeBreaks, na.rm=TRUE),
+                                          include.lowest=TRUE)
+
+testdata$MeanChange <- as.numeric(testdata$MeanChange)  
+
+library(ggplot2)
+d <- data.frame(testdata,fill_val = rgb(blue=0.5,red = testdata$MHW/5, green = testdata$MeanChange/5))
+
+world <- map_data("world")
+map<- ggplot(d, aes(x=lon, y=lat)) +
+  geom_tile(aes(fill = fill_val)) +
+  scale_fill_identity()+
+  geom_cartogram(data=world, map=world,
+                 aes(x=long, y=lat, map_id=region),fill="white",color="black")+
+  coord_quickmap(xlim=c(-180,180), ylim=c(-89, 90))+
+  ylab("")+
+  xlab("")+
+  scale_y_continuous(expand = c(0, -5))+
+  scale_x_continuous(expand = c(0, 0))+
+  labs(title=paste("(A) Sea Surface Temperature",sep=""))+
+  theme(axis.line = element_blank(),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        legend.position="bottom",
+        #panel.border = element_blank(),
+        panel.border = element_rect(colour = "black", fill=NA, size=1),
+        panel.background = element_blank(),
+        #axis.text.y=element_blank(),
+        axis.text=element_text(size=9,colour="black"),
+        plot.title=element_text(hjust=0,vjust=-0.4,face="bold",size=24)
+  )
+dlegend <- expand.grid(x = seq(0, 1, 0.25), y = seq(0, 1, 0.25)) %>%
+  mutate(mix2 = rgb(red = x, green = y, blue = 0.5))
+library(cowplot)
+xyLegend <- ggplot(dlegend, aes(x, y)) +
+  geom_tile(aes(fill = mix2)) +
+  scale_fill_identity() +
+  labs(x = "Higher MHW change->",
+       y = "Higher mean change->") +
+  theme_void() +
+  theme(axis.title = element_text(size = 8),
+        axis.title.y = element_text(angle = 90)) +
+  coord_fixed()
+p=ggdraw() +
+  draw_plot(map, 0, 0, 1, 1) +
+  draw_plot(xyLegend, 0.05, 0.1, 0.2, 0.2)
+#ggsave(p,filename="/Users/william/Google Drive/Projects/MHWs Global/MHW_SST_plot.png",height=9,width=8,dpi=300)
+ggsave(map,filename="/Users/william/Google Drive/Projects/MHWs Global/MHW_SST_plot_map.png",height=8,width=11,dpi=300) (edited) 
+
+
+```
+
 # Results
 
 ## Percentage Change
@@ -2725,8 +3032,6 @@ ggplot(Dem_pel) +
   facet_wrap(~un_sub_region)
 
 ```
-
-
 
 ## Troubleshooting
 
